# aisi-economy-index-v2

./: .env.sample  .gitignore  CLAUDE.md  README.md  embed_models.toml  index.html  isambard_config.toml  llm_models.toml  nblite.toml  netrun.json  pipeline.html  pyproject.toml  run_defs.toml  run_sbatch_pipeline.py  setup_repository.sh  test_matching_pipeline.py  validation_5k__analyse_job_ads_pipeline_arm1.html  validation_5k__analyse_job_ads_pipeline_arm2.html  validation_5k__analyse_job_ads_pipeline_arm3.html  validation_5k__arm1.html
.claude/skills/netrun-actions/: SKILL.md
.claude/skills/netrun-caching/: SKILL.md
.claude/skills/netrun-cli/: SKILL.md
.claude/skills/netrun-config/: SKILL.md
_dev/pipeline-notes/: 01_experiment_results_and_final_pipeline.md  02_new_pipeline_nodes.md
_dev_notes/: final_validation_report.md  reranker_architecture_analysis.md  softmax_normalization_change.md  validation_report.md
agent-context/: NBLITE_INSTRUCTIONS.md  NETRUN_INSTRUCTIONS_CONCISE.md
calibration/: calibrate_all.py  estimate.py  run_calibration.py  run_defs.toml
calibration/results/: qwen-7b-sbatch__bge-large-mac.json  qwen-7b-sbatch__bge-large-sbatch.json
config/: deploy.toml  embed_models.toml  isambard.toml  llm_models.toml  netrun.json  rerank_models.toml  run_defs.toml  validation.toml
dev/exposure_code_scratch/: 00_loading_onet.ipynb  01_felten_scores.ipynb  01_presence_scores.ipynb  01_task_scores.ipynb  02_eda_all_scores.ipynb  03_eda_adzuna_1pct_for_slides.ipynb  04_survey_analysis.ipynb  05_onet_validation.ipynb  06_additional_survey_plots.ipynb  06_exposure_adjudication.ipynb
dev/recipes/: add_func_node.py
dev/templates/: func_node.pct.py.jinja
docs/: aisi_index_net.html
nbs/ai_index/: const.ipynb  run_pipeline.ipynb
nbs/analysis/: 02_geographic_maps.ipynb
nbs/calibration/: __init__.ipynb  calibrate_all.ipynb  estimate.ipynb  run_calibration.ipynb
nbs/deploy/: __init__.ipynb  config.ipynb  deploy_pipeline.ipynb  destroy.ipynb  download_store.ipynb  get_ip.ipynb  run_cmd.ipynb  run_pipeline.ipynb
nbs/dev_utils/: __init__.ipynb  utils.ipynb
nbs/isambard_utils/: __init__.ipynb  config.ipynb  env.ipynb  models.ipynb  orchestrate.ipynb  sbatch.ipynb  slurm.ipynb  ssh.ipynb  transfer.ipynb
nbs/llm_runner/: __init__.ipynb  cli.ipynb  cosine.ipynb  embed.ipynb  llm.ipynb  models.ipynb  rerank.ipynb  serialization.ipynb
nbs/validation/: __init__.ipynb  analyse_benchmark_comparison.ipynb  analyse_job_ads_pipeline_arm1.ipynb  analyse_job_ads_pipeline_arm2.ipynb  analyse_job_ads_pipeline_arm3.ipynb  run_all.ipynb  run_validation.ipynb  utils.ipynb
pts/ai_index/: const.pct.py  run_pipeline.pct.py  utils.pct.py
pts/analysis/: 01_core_exposure_analysis.pct.py  02_geographic_maps.pct.py
pts/calibration/: __init__.pct.py  calibrate_all.pct.py  estimate.pct.py  run_calibration.pct.py
pts/deploy/: __init__.pct.py  config.pct.py  deploy_pipeline.pct.py  destroy.pct.py  download_store.pct.py  get_ip.pct.py  run_cmd.pct.py  run_pipeline.pct.py
pts/dev_utils/: __init__.pct.py  utils.pct.py
pts/examples/: 00_running_models_locally.pct.py  01_running_models_on_isambard.pct.py  02_structured_output.pct.py  03_idempotent_jobs.pct.py  04_observe_dashboard.pct.py  04_reasoning_models_structured_output.pct.py  05_embedding_prompt_modes.pct.py
pts/experiments/: 03_llm_reranking.pct.py  06_sota_rerankers.pct.py  07_embedding_model_comparison.pct.py
pts/isambard_utils/: __init__.pct.py  config.pct.py  env.pct.py  models.pct.py  orchestrate.pct.py  sbatch.pct.py  slurm.pct.py  ssh.pct.py  transfer.pct.py
pts/isambard_utils_tests/: test_integration.pct.py  test_models.pct.py
pts/llm_runner/: __init__.pct.py  cli.pct.py  cosine.pct.py  embed.pct.py  llm.pct.py  models.pct.py  rerank.pct.py  serialization.pct.py
pts/validation/: __init__.pct.py  analyse_benchmark_comparison.pct.py  analyse_job_ads_pipeline_arm1.pct.py  analyse_job_ads_pipeline_arm2.pct.py  analyse_job_ads_pipeline_arm3.pct.py  analyse_leave_one_group_out.pct.py  analyse_major_group_stability.pct.py  analyze.pct.py  analyze_arm1.pct.py  analyze_arm2.pct.py  analyze_arm3.pct.py  run_all.pct.py  run_validation.pct.py  utils.pct.py
scripts/: deploy_setup.py  migrate_adzuna_to_duckdb.py  migrate_cache_for_subgraphs.py
src/ai_index/: const.py  run_pipeline.py  utils.py
src/calibration/: __init__.py  calibrate_all.py  estimate.py  run_calibration.py
src/deploy/: config.py  deploy_pipeline.py  deploy_setup.py  destroy.py  download_store.py  get_ip.py  run_cmd.py  run_pipeline.py
src/dev_utils/: __init__.py  utils.py
src/isambard_utils/: __init__.py  config.py  env.py  models.py  orchestrate.py  sbatch.py  slurm.py  ssh.py  staging.py  transfer.py
src/isambard_utils_tests/: test_integration.py  test_models.py
src/llm_runner/: __init__.py  __main__.py  cli.py  cosine.py  embed.py  llm.py  models.py  rerank.py  serialization.py  staged.py
src/tests/: test_llm_runner.py
src/validation/: __init__.py  analyze.py  run_all.py  run_validation.py  utils.py
store/inputs/: lad22_lookup.csv
validation/: PLAN.md
(+413 files in other folders)
