[project]
name = "ai-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "netrun>=0.4.1",
    "netrun-sim>=0.1.4",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.3",
    "nblite>=1.1.11",
    "netrun-ui>=0.2.0",
    "netrun[cli]>=0.4.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
dev = { path = "src/dev", editable = true }
netrun-sim = { git = "https://github.com/lukastk/netrun", subdirectory = "netrun-sim/python" }
netrun = { git = "https://github.com/lukastk/netrun", subdirectory = "netrun" }
netrun-ui = { git = "https://github.com/lukastk/netrun", subdirectory = "netrun-ui" }


[project.scripts]
ai-index = "ai_index.cli._app:app_main"
run-pipeline = "ai_index.run_pipeline:main"

[project.urls]
Homepage = "https://github.com/Autonomy-Data-Unit/aisi-economy-index"
Documentation = "https://github.com/Autonomy-Data-Unit/aisi-economy-index"
Repository = "https://github.com/Autonomy-Data-Unit/aisi-economy-index"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
sources = ["src"]
packages = ["src/ai_index", "src/isambard_utils"]
include = [
    "src/ai_index/assets/**",
    "src/ai_index/scripts/**",
    "src/isambard_utils/assets/**",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["src"]
