[project]
name = "ai-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "netrun>=0.4.1",
    "netrun-sim>=0.1.4",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "adulib[llm]>=0.1",
    "torch>=2.0",
    "sentence-transformers>=5.0",
    "transformers>=5.0",
    "accelerate>=1.0",
    "pandas>=2.0",
    "pyarrow>=10.0",
    "nest-asyncio>=1.6",
    "boto3>=1.42.60",
    "duckdb>=1.0",
    "outlines>=1.2.12",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.3",
    "nblite>=1.1.12",
    "netrun-ui>=0.2.0",
    "netrun[cli]>=0.4.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ipynbname>=2025.8.0.0",
    "ipywidgets>=8.1.8",
    "pyinfra>=3.0",
]

[tool.uv.sources]
dev = { path = "src/dev", editable = true }
netrun-sim = { git = "https://github.com/lukastk/netrun", subdirectory = "netrun-sim/python" }
netrun = { git = "https://github.com/lukastk/netrun", subdirectory = "netrun" }
netrun-ui = { git = "https://github.com/lukastk/netrun", subdirectory = "netrun-ui" }


[project.scripts]
run-pipeline = "ai_index.run_pipeline:main"
run-calibration = "calibration.run_calibration:main"
estimate-calibration = "calibration.estimate:main"
calibrate-all = "calibration.calibrate_all:main"
run-validation = "validation.run_validation:main"
validate-all = "validation.run_all:main"
analyze-validation = "validation:analyze_main"
remote-deploy-pipeline = "deploy.deploy_pipeline:main"
remote-destroy = "deploy.destroy:main"
remote-run-cmd = "deploy.run_cmd:main"
remote-download-store = "deploy.download_store:main"
remote-ip = "deploy.get_ip:main"

[project.urls]
Homepage = "https://github.com/Autonomy-Data-Unit/aisi-economy-index"
Documentation = "https://github.com/Autonomy-Data-Unit/aisi-economy-index"
Repository = "https://github.com/Autonomy-Data-Unit/aisi-economy-index"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
sources = ["src"]
packages = ["src/ai_index", "src/isambard_utils", "src/dev_utils", "src/llm_runner", "src/calibration", "src/validation", "src/deploy"]
include = [
    "src/ai_index/scripts/**",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["src"]
